; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/ethernet/eth2ap/main/extr_ethernet_example_main.c_wifi_event_handler.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/ethernet/eth2ap/main/extr_ethernet_example_main.c_wifi_event_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"Wi-Fi AP got a station connected\00", align 1
@s_sta_is_connected = common dso_local global i32 0, align 4
@ESP_IF_WIFI_AP = common dso_local global i32 0, align 4
@pkt_wifi2eth = common dso_local global i32* null, align 8
@.str.1 = private unnamed_addr constant [36 x i8] c"Wi-Fi AP got a station disconnected\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i32, i8*)* @wifi_event_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wifi_event_handler(i8* %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %9 = load i32, i32* %7, align 4
  switch i32 %9, label %21 [
    i32 129, label %10
    i32 128, label %16
  ]

10:                                               ; preds = %4
  %11 = load i32, i32* @TAG, align 4
  %12 = call i32 @ESP_LOGI(i32 %11, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0))
  store i32 1, i32* @s_sta_is_connected, align 4
  %13 = load i32, i32* @ESP_IF_WIFI_AP, align 4
  %14 = load i32*, i32** @pkt_wifi2eth, align 8
  %15 = call i32 @esp_wifi_internal_reg_rxcb(i32 %13, i32* %14)
  br label %22

16:                                               ; preds = %4
  %17 = load i32, i32* @TAG, align 4
  %18 = call i32 @ESP_LOGI(i32 %17, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.1, i64 0, i64 0))
  store i32 0, i32* @s_sta_is_connected, align 4
  %19 = load i32, i32* @ESP_IF_WIFI_AP, align 4
  %20 = call i32 @esp_wifi_internal_reg_rxcb(i32 %19, i32* null)
  br label %22

21:                                               ; preds = %4
  br label %22

22:                                               ; preds = %21, %16, %10
  ret void
}

declare dso_local i32 @ESP_LOGI(i32, i8*) #1

declare dso_local i32 @esp_wifi_internal_reg_rxcb(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
